# Alchemy-Trading-bot

./: .gitignore  app.py  deploy_vps.sh  healthcheck.py  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt  run.py
ClaudeTrading/: ACTIVE_TRADE_LOG.md  BOT_QUICK_START.md  BOT_SETUP_GUIDE.md  MU_entry_analysis.md  capitol_fetcher.py  config.py  install_deps.bat  main.py  politician_ranker.py  requirements.txt  run_bot.bat  run_bot.ps1  setup_and_run.bat  trade_mirror.py  trading_framework.md
ClaudeTrading/briefings/: BRIEFING_2026_04_08.md
ClaudeTrading/execution/: alpaca_broker.py
ClaudeTrading/memory/: feedback_trading_framework.md
ClaudeTrading/utils/: logger.py  notifier.py
artifacts/trading-command/: app.json
artifacts/trading-command/constants/: colors.ts
attached_assets/: Pasted--3-Production-Deployment-Sovereign-Autonomy-What-Why-Pr_1775711046628.txt  Pasted-Gemini-said-Since-the-foundation-and-the-visualization-_1775710744447.txt
trading-command/: package.json
trading-command/app/: _layout.tsx
trading/data/: trading.db
trading/services/: agent_loop.py  agent_memory.py  backtester.py  bot_manager.py  broker.py  capitol_fetcher.py  claude_brain.py  context_compiler.py  indicators.py  macro_engine.py  managed_agent.py  notifications.py  political_mirror.py  politician_ranker.py  risk_manager.py  tool_server.py
trading/ui/: charts.py
trading/ui/plotly_capture/: __init__.py
trading/ui/plotly_capture/frontend/: index.html
trading/utils/: config.py  database.py  state_manager.py
(+2 files in other folders)
