[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpaca-trade-api>=3.2.0",
    "anthropic>=0.92.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "ta>=0.11.0",
    "yfinance>=0.2.61",
    "schedule>=1.2.0",
]
